<resources>
    <string name="app_name" translatable="false">MyDocApp</string>

    <string name="forgot_password"><u>FORGET PASSWORD</u></string>
    <string name="create_new"><u>CREATE NEW ACCOUNT </u></string>
    <string name="skip"><u>SKIP</u></string>
    <string name="fb_login">Sign in with facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="facebook_app_id" translatable="false">364208140834390</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb364208140834390</string>
    <string name="open_msg">Your health care connection</string>
    <string name="registration">REGISTRATION</string>
    <string name="forget">FORGET PASSWORD</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="edit_text_error">This field is required</string>
    <string name="invalid_number_error">Invalid mobile number</string>
    <string name="user_exist_error">This user exists</string>

    <string name="invalid_mail_error">Invalid email</string>
    <string name="invalid_password_error">Password length must be greater that 6</string>


    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_form" translatable="false">DD/MM/YYYY</string>
    <string name="mobile">Mobile number</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="accept_terms"><u>Accept Terms and conditions</u></string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appointment">Appointments</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="promotions">Promotions</string>
    <string name="more">More</string>

    <string name="appointment_msg">You must login to \nGet your appointments</string>
    <string name="favorites_msg">You must login to \nGet your favorites</string>

    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="completed">Completed</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="my_family">My Family</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy policy</string>
    <string name="about">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="log_in">Log in</string>
    <string name="You_must_accept">You must accept to get the services</string>
    <string name="doctors">Doctors</string>
    <string name="hospitals">Hospitals</string>
    <string name="personal_info">Personal information</string>
    <string name="insurance">Select insurance</string>
    <string name="change_pass">Change password</string>
    <string name="national_id">National identity number</string>
    <string name="save">Save</string>
    <string name="add_insurance_card">Add insurance card</string>
    <string name="new_password">New pasword</string>
    <string name="family_members">Family members</string>
    <string name="add_new_member">Add new member</string>
    <string name="edit_family_member">Edit family member</string>
    <string name="do_you_wanna_go">Do you want to logout ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="we_glad_to_listen">We glad to listen to you</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="follow_us">Follow us</string>
    <string name="web_site" translatable="false">www.doctory.com.bh</string>
    <string name="change_language">Change language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="app_remainders">Appointment reminders</string>
    <string name="promo_notification">Promotion notification</string>
    <string name="search_message">Better Health .. Better Life</string>
    <string name="doctor">Doctor</string>
    <string name="facility">Facility</string>
    <string name="select_date">Select a Date (optional)</string>
    <string name="filter">Filter</string>
    <string name="search_for">Search for ..</string>
    <string name="request_appointment">Request appointment</string>
    <string name="choose_specific_doctor">Choose specific doctor</string>
    <string name="appointment_request">Appointment request</string>
    <string name="appointment_schedule">Appointment schedule</string>
    <string name="speciality">Speciality</string>
    <string name="preferred_date">Preferred date</string>
    <string name="preferred_time">Preferred time</string>
    <string name="confirmation">Confirmation</string>
    <string name="salamat">Salamat …</string>
    <string name="request_received">Your request is received</string>
    <string name="booking_number">Booking number :</string>
    <string name="patient_name">Patient name :</string>
    <string name="doctor_name">Doctor name :</string>
    <string name="clinic_name">Clinic name :</string>
    <string name="speciality_c">Speciality :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="confirmation_msg">Thanks for booking with us, facility representative will contact you shortly to confirm your appointment</string>
    <string name="health_facility">Healthcare facilities</string>
    <string name="call"><u>Call</u></string>
    <string name="location_u"><u>Location</u></string>
    <string name="web_site_lined"><u>Website</u></string>
    <string name="advanced_search">Advanced search</string>
    <string name="choose_specific_facility">Choose specific facility</string>
    <string name="speciality_u"><u>Speciality</u></string>
    <string name="doctors_u"><u>Doctors</u></string>
    <string name="insurance_u"><u>Insurance</u></string>
    <string name="general_info">General info</string>
    <string name="location">Location</string>
    <string name="profile_text">Profile</string>
    <string name="clinic_info">Clinic info</string>
    <string name="cancel_appointment">Cancel appointment</string>
    <string name="get_direction">Get direction</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="user_not_exist_error">No such user email exists \nCreate new account</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="please_choose_visit_type">Please choose visit type</string>
    <string name="confirm">Confirm</string>
    <string name="code">Code</string>
    <string name="reset_pass">Reset password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="book_now">Book now</string>
    <string name="select_speciality">Select Speciality</string>
    <string name="select_insurance_op">Select insurance (optional)</string>
    <string name="select_insurance">Select insurance</string>
    <string name="select_area_o">Select area (optional)</string>
    <string name="select_area">Select area</string>
    <string name="sent_successfully">Your message sent successfully .. thanks</string>
    <string name="password_changed">New password set successfully</string>
    <string name="select_relation">Select Relation</string>
    <string name="speciality_must_be_selected">Speciality must be selected</string>
    <string name="no_mail_available">No Email available</string>
    <string name="no_direction_available">No direction available</string>
    <string name="no_loc_available">No location available</string>
    <string name="no_phone_available">No phone number available</string>
    <string name="select_qualify">Select qualification</string>
    <string name="select_nationality">Select nationality</string>
    <string name="select_lang">Select language</string>
    <string name="clear_filter">Clear\nFilter</string>
    <string name="select_fac_type">Select facility type</string>
    <string name="gender_is_must">Please choose gender</string>
    <string name="relation_is_must">Please choose relation</string>
    <string name="set_image">Please set image</string>
    <string name="gender_correct">Please correct gender selection</string>
    <string name="error">Some error happened \\nTry again</string>
    <string name="added_successfully">Added successfully</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="passwords_no_match">Passwords not matching \nset it again</string>
    <string name="no_family_members">No data for family members \nAdd your family to your care</string>
    <string name="no_notification">No notifications to show</string>
    <string name="no_doctor">No doctor results</string>
    <string name="no_facility">No facility results</string>
    <string name="cancel_appointment_msg">Are you sure you  want to cancel this appointment?</string>
    <string name="no_fav_doctor">No Favorite doctors</string>
    <string name="no_fav_facility">No favorite facility</string>
    <string name="no_app_found">No appointments found</string>
    <string name="try_again">Try again</string>
    <string name="no_internet">No internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="u_must_login">You need to login</string>


</resources>
