<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_appointments"
        android:icon="@drawable/app1"
        android:title="@string/appointment" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/fav1"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search1"
        android:title="@string/search" />


    <item
        android:id="@+id/navigation_promotions"
        android:icon="@drawable/promotions"
        android:title="@string/promotions" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more1"
        android:title="@string/more" />

</menu>
