<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_8dp">

    <TextView
        android:id="@+id/promotion_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title_home"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_16sp" />

    <ImageView
        android:id="@+id/promotion_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        android:background="@drawable/border_bottom" />

    <TextView
        android:id="@+id/promotion_sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/notification" />

    <Button
        android:id="@+id/promotion_book_button"
        android:layout_width="@dimen/_250dp"
        android:layout_height="@dimen/_36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/border_sign_in"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/book_now"
        android:textColor="@color/colorBackground"
        android:textSize="@dimen/_12sp" />

</LinearLayout>