<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundSecond"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/appointment"
        android:textAllCaps="true"
        android:textColor="@color/colorBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:background="@color/colorBackgroundSecond"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/appointment_tabs_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:theme="@style/AppTabLayout">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_1dp"
                android:paddingEnd="@dimen/_1dp"
                android:text="@string/pending" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/dash_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_1dp"
                android:paddingEnd="@dimen/_1dp"
                android:text="@string/confirmed" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/notify_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_1dp"
                android:paddingEnd="@dimen/_1dp"
                android:text="@string/completed" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@drawable/border_home"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_8dp" />
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/appointment_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/appointment_msg"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryTexts"
            android:textSize="@dimen/_20sp" />
    </FrameLayout>

</LinearLayout>