<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundSecond"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/favorites"
        android:textAllCaps="true"
        android:textColor="@color/colorBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:background="@color/colorBackgroundSecond"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/favorites_tabs_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:theme="@style/AppTabLayout">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/fav_doctor_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_1dp"
                android:paddingEnd="@dimen/_1dp"
                android:text="@string/doctors" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/fav_facility_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_1dp"
                android:paddingEnd="@dimen/_1dp"
                android:text="@string/hospitals" />
        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/appointment_frame"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_30dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/favo_msg"
            android:text="@string/favorites_msg"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@color/colorPrimaryTexts"
            android:textSize="@dimen/_20sp" />
    </FrameLayout>

</LinearLayout>