<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTexts"
    android:orientation="vertical">

    <TextView
        android:id="@+id/facility_details_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/confirmation"
        android:textAllCaps="true"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appoint_request_back"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingEnd="@dimen/_16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_horizontal"
                android:text="@string/salamat"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_16sp" />

            <ImageView
                android:layout_width="@dimen/_72dp"
                android:layout_height="@dimen/_72dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:src="@drawable/salamat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:text="@string/request_received"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/booking_number"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/confirmation_booking_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_form"
                    android:textColor="@color/colorGray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/patient_name"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/confirmation_patient_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_form"
                    android:textColor="@color/colorGray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/doctor_name"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/confirmation_doctor_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_form"
                    android:textColor="@color/colorGray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clinic_name"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/confirmation_clinic_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_form"
                    android:textColor="@color/colorGray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/speciality_c"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/confirmation_speciality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_form"
                    android:textColor="@color/colorGray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/confirmation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_form"
                    android:textColor="@color/colorGray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/confirmation_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_form"
                    android:textColor="@color/colorGray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginEnd="@dimen/_32dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:gravity="center_horizontal"
                android:text="@string/confirmation_msg"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/_10sp" />


            <Button
                android:id="@+id/confirmation_button"
                android:layout_width="@dimen/_230dp"
                android:layout_height="@dimen/_36dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_32dp"
                android:background="@drawable/border_sign_in"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/title_home"
                android:textColor="#ffffff"
                android:textSize="@dimen/_12sp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>